change padding to team image to fix problem where text from above section overlapped with image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ li a:hover {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
     opacity: 0.5;
-    margin-top: 25px;
+    margin-top: 75px;
 }
 
 /* footer */
